@@ -1,0 +1,9 @@
+Title: Fixed exception in "Virtual host tree" snapin in case a user tries to access a not existing tree
+Level: 1
+Component: multisite
+Compatible: compat
+Version: 1.2.8p15
+Date: 1480941304
+Class: fix
+
+
