@@ -16,6 +16,7 @@
     * 4080 FIX: Fixed possible exception "unsupported operand type" in matrix views
     * 4085 FIX: Fixed bug when rendering table views that have joined columns
     * 4127 FIX: Fixed possible "maximum recursion depth exceeded" error when sorting tables with a lot of text in cells
+    * 4128 FIX: Fixed exception in "Virtual host tree" snapin in case a user tries to access a not existing tree
 
     WATO:
     * 4077 FIX: Fixed "Request URI too long" when cloning role after editing another one
